# worldle

./: .gitignore  Justfile  LICENSE  README.md  docker-compose.yml  template.env
backend/: alembic.ini  pyproject.toml
backend/blank/api/: interfaces.py  main.py
backend/blank/db/migrations/: env.py
backend/worldle/api/: interfaces.py  main.py
backend/worldle/db/: models.py  session.py
backend/worldle/db/migrations/: env.py  script.py.mako
backend/worldle/db/migrations/versions/: 049cc87131ac_add_guess_index.py  1db25dc4afe7_change_countries_schema.py  26a9da2b58b6_change_countries_schema.py  32bd18ce7211_add_status_col.py  38a1cb5a0df4_add_game_tables.py  5069297c64c1_add_countries.py  700ebc8931b1_change_countries_schema.py  b32de750880e_add_svg_bucket_col.py  cb702ad590af_change_countries_schema.py
backend/worldle/prep/: generate_svgs.py  ingest_countries.py
backend/worldle/utils/: game.py  image.py  stats.py
frontend/: Dockerfile  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/client/: services.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: CountrySelect.tsx  Footer.css  Footer.tsx  GamePlayer.tsx  GuessList.tsx  Header.css  Header.tsx  ReadyGate.tsx  SettingsPane.tsx  StatsPane.tsx  ViewGate.tsx
frontend/src/contexts/: CountriesContext.tsx  SettingsContext.tsx  UserContext.tsx  ViewContext.tsx
frontend/src/pages/: GamePage.css  GamePage.tsx
